@@ -20,6 +20,7 @@ Compilers:
 - tools/eqparsetree compare two parsetree ignoring location
 - ocamlopt now uses clang as assembler on OS X if available, which enables
   CFI support for OS X.
+
 Bug fixes:
 - PR#4762: ?? is not used at all, but registered as a lexer token
 - PR#4994: ocaml-mode doesn't work with xemacs21
@@ -58,7 +59,8 @@ Bug fixes:
   coresponding module
 * PR#5835: nonoptional labeled arguments can be passed with '?'
 - PR#5865: assert failure when reporting undefined field label
-- PR#5885: Incorrect rule for compiling C stubs when shared libraries are not supported.
+- PR#5885: Incorrect rule for compiling C stubs when shared libraries are not
+  supported.
 - ocamlbuild now picks the non-core tools like ocamlfind and menhir from PATH
 
 Internals:
@@ -78,6 +80,7 @@ Tools:
 - OCamlbuild now features a bin_annot tag to generate .cmt files.
 - OCamlbuild now features a strict_sequence tag to trigger the strict-sequence
   option.
+- PR#5884: Misc minor fixes and cleanup for emacs mode
 
 OCaml 4.00.2:
 -------------
